# rust-wasm-canvas-example

./: .gitignore  Cargo.toml  README.md  package.json
js/: index.html  index.js
src/: app.rs  canvas.rs  lib.rs  utils.rs
styles/: main.css
